--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "KinLoop",
-    "slug": "KinLoop",
+    "name": "BridgeCare",
+    "slug": "BridgeCare",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
