--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kinloop",
   "version": "1.0.0",
   "main": "index.ts",
+  "private": true,
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -15,27 +16,30 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
     "@tanstack/react-query": "^5.85.5",
-    "expo": "~53.0.22",
-    "expo-blur": "~14.1.5",
-    "expo-haptics": "~14.1.4",
-    "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-status-bar": "~2.2.3",
+    "expo": "54.0.7",
+    "expo-blur": "~15.0.7",
+    "expo-haptics": "~15.0.7",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-status-bar": "~3.0.8",
     "nanoid": "^5.1.5",
     "phosphor-react-native": "^3.0.0",
-    "react": "19.0.0",
-    "react-native": "0.79.6",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.15.4",
+    "react-native-screens": "~4.16.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@babel/core": "^7.28.4",
+    "@types/react": "~19.1.10",
+    "babel-preset-expo": "^11.0.15",
+    "typescript": "~5.9.2"
   },
-  "private": true
+  "overrides": {
+    "@types/react": "~19.1.10"
+  }
 }
