--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.2.4",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
@@ -30,13 +31,14 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-worklets": "^0.5.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@types/react": "~19.1.10",
-    "babel-preset-expo": "^11.0.15",
+    "babel-preset-expo": "~54.0.1",
     "typescript": "~5.9.2"
   },
   "overrides": {
